# fawaris-python

./: .gitignore  README.md  pyproject.toml
fawaris/: __init__.py  exceptions.py  models.py  sep10.py  sep24.py
fawaris/databases/: tables.py
fawaris/fastapi/: __init__.py  example.py  exception_handlers.py  main.py  sep10.py  sep24.py  utils.py
server/: main.py  sep10.py  sep24.py
tests/: test_sep10.py
