[tool.poetry]
name = "fawaris"
version = "0.1.0"
description = "Async framework-agnostic Stellar Anchor implementation"
authors = ["Yuri Escalianti <yuriescl@gmail.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.7"
stellar-sdk = "^7.0.1"
pydantic = "^1.0"
PyJWT = "^2.1"
typing-extensions = "^4.1.1"
fastapi = {version = "^0.75.0", extras = ["fastapi"]}
uvicorn = {version = "^0.17.6", extras = ["fastapi"]}
python-multipart = {version = "^0.0.5", extras = ["fastapi"]}
databases = {version = "^0.5.5", extras = ["postgresql,asyncpg,aiopg,mysql,aiomysql,asyncmy,sqlite,aiosqlite"]}
asyncpg = {version = "^0.25.0", extras = ["asyncpg,postgresql"]}
aiopg = {version = "^1.3.3", extras = ["aiopg"]}
aiomysql = {version = "^0.0.22", extras = ["mysql,aiomysql"]}
asyncmy = {version = "^0.2.3", extras = ["asyncmy"]}
aiosqlite = {version = "^0.17.0", extras = ["sqlite,aiosqlite"]}
overrides = {version = "^6.1.0", extras = ["fastapi,postgresql,asyncpg,aiopg,mysql,aiomysql,asyncmy,sqlite,aiosqlite"]}

[tool.poetry.dev-dependencies]
blank = "^0.1.0"
flake8 = "^4.0.1"
ipython = "7.32.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
