[tool.poetry]
name = "fawaris"
version = "0.1.37"
description = "Async framework-agnostic Stellar Anchor interface"
authors = ["Yuri Escalianti <yuriescl@gmail.com>"]
license = "Apache License Version 2.0"
homepage = "https://github.com/yuriescl/fawaris-python"

[tool.poetry.dependencies]
python = "^3.7"
stellar-sdk = "^7.0.1"
pydantic = "^1.0"
PyJWT = "^2.1"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipython = "7.32.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
